# pure-prolog

./: pure-prolog.cabal
