cabal-version:      >= 1.8
name:               pure-prolog
version:            0.3.0.0
build-type: Simple

library
    -- Modules included in this executable, other than Main.
    exposed-modules: Analysis, Ast, Interp, Parser
    build-depends:    base, parsec, pretty, containers
    hs-source-dirs:   src

executable pure-prolog
    main-is:          Main.hs
    build-depends:    base, parsec, pretty, containers, cmdargs, pure-prolog
    hs-source-dirs:   src
